feat: (wip) create missing apiservices structure
